@@ -91,7 +91,7 @@
         <repository>snapshots</repository>
 
         <!-- source requirements -->
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- plugin dependency versions -->
@@ -222,7 +222,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
+                    <argLine>-Xms800m -Xmx800m</argLine>
                     <includes>
                         <include>**/*IT.java</include>
                         <include>**/*Test.java</include>
